# swaralayamediaplayer

./: .gitignore  CMakeLists.txt  License.txt  README.md  test_mpv.cpp  test_mpv_filter.cpp  test_mpv_filter2.cpp  test_mpv_filters.cpp  test_mpv_lavfi.cpp  test_mpv_scaletempo.cpp  test_mpv_sync.cpp
src/: main.cpp  resources.qrc
src/Player/: PlayerController.cpp  PlayerController.h
src/Settings/: Settings.cpp  Settings.h
src/UI/: MainWindow.cpp  MainWindow.h  VideoWidget.cpp  VideoWidget.h
